<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent" android:layout_width="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".DetailActivity" android:orientation="vertical">
        <ImageView android:id="@+id/imgDetail" android:layout_width="match_parent" android:layout_height="250dp" android:scaleType="centerCrop"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:padding="16dp">
            <TextView android:id="@+id/tvdTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title" android:textColor="@android:color/black" android:textStyle="bold" android:textSize="25sp"/>
            <TextView android:id="@+id/tvdDesc" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/description" android:textColor="@android:color/black" android:textSize="18sp"/>
            <Button android:id="@+id/btnVideo" android:paddingLeft="30dp" android:paddingRight="30dp" android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/lihat_video" style="@style/buttonVideo" android:drawingCacheQuality="auto"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>